<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Watermark">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:textSize="30sp"
                android:textColor="@color/black"
                android:text="@string/watermark"/>

            <ImageView
                android:id="@+id/watermark_source"
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:layout_marginBottom="10dp"
                tools:ignore="ContentDescription"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:text="@string/original"/>

            <ImageView
                android:id="@+id/watermark_result"
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:layout_marginBottom="10dp"
                tools:ignore="ContentDescription"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:text="@string/watermark_result"/>

            <ImageView
                android:id="@+id/watermark_bitmap_source"
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:layout_marginBottom="10dp"
                tools:ignore="ContentDescription"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:text="@string/bitmap1"/>

            <ImageView
                android:id="@+id/watermark_bitmap_result"
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:layout_marginBottom="10dp"
                tools:ignore="ContentDescription"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:text="@string/bitmap2"/>

            <Button
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:gravity="center"
                android:text="@string/back" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>