<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Merge">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:textSize="30sp"
                android:textColor="@color/black"
                android:text="@string/merge"/>

            <TextView
                android:id="@+id/percent_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:text="@string/percent"/>

            <SeekBar
                android:id="@+id/percentage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:min="1"
                android:max="9"
                android:progress="5"/>

            <ImageView
                android:id="@+id/merge_source_1"
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:layout_marginBottom="10dp"
                tools:ignore="ContentDescription"/>

            <ImageView
                android:id="@+id/merge_source_2"
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:layout_marginBottom="10dp"
                tools:ignore="ContentDescription"/>

            <ImageView
                android:id="@+id/merge_result"
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:layout_marginBottom="10dp"
                tools:ignore="ContentDescription"/>

            <Button
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:gravity="center"
                android:text="@string/back" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>